dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clouddashboard-deployment
  labels:
    app: clouddashboard
spec:
  replicas: 2
  selector:
    matchLabels:
      app: clouddashboard
  template:
    metadata:
      labels:
        app: clouddashboard
    spec:
      containers:
        - name: clouddashboard
          image: 
          ports:
            - containerPort: 3000
