keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.className: "traefik"
    traefik.ingress.kubernetes.io/transport.respondingTimeouts.idleTimeout: "600"
    traefik.ingress.kubernetes.io/transport.respondingTimeouts.readTimeout: "600"
    traefik.ingress.kubernetes.io/transport.respondingTimeouts.writeTimeout: "600"
    traefik.ingress.kubernetes.io/custom-request-headers: "X-Forwarded-Proto:%[req.scheme"
spec:
  rules:
    - host: keycloak.webrobot.eu  # Modifica con il tuo dominio
      http:
        paths:
          # Regola 2: Tutto il resto viene passato senza riscritture
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080  # Porta del servizio Keycloak
